[workspace]
members = ["packages/tea", "examples/tea-time"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.dependencies]
dioxus = { version = "0.7.0-alpha.1", features = [] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


