[workspace]
members = ["packages/dioxus_tea"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80.0"
version = "0.1.5"
repository = "https://github.com/mibes404/dioxus_tea.git"
keywords = ["dioxus", "elm", "tea", "model", "state"]

[workspace.dependencies]
dioxus = { version = "0.7.0-alpha.2", features = [] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
