[package]
name = "tea-time"
authors = ["Marcel Ibes <mibes@avaya.com>"]
description = "Dioxus The Elm Architecture (tea)"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
dioxus-tea = { path = "../../packages/tea" }
dioxus = { workspace = true }
dioxus-sdk = { version = "0.7.0-alpha.1", features = ["util", "time"] }
